[gd_scene load_steps=12 format=3 uid="uid://crjeudwcdacco"]

[ext_resource type="Script" path="res://player/player.gd" id="1_78ula"]
[ext_resource type="Texture2D" uid="uid://urqh4msbhqf" path="res://content/assets/sprites/characters/main_char.png" id="2_seln7"]
[ext_resource type="PackedScene" uid="uid://ct1l81litlaf6" path="res://managers/SfxManager.tscn" id="3_nsl3i"]
[ext_resource type="PackedScene" uid="uid://di7qr3yfd1odi" path="res://managers/MusicManager.tscn" id="4_kyawv"]
[ext_resource type="Script" path="res://CombatComponents/HealthComponent.gd" id="5_hf0il"]
[ext_resource type="Script" path="res://CombatComponents/HurtBox.gd" id="6_7ypip"]
[ext_resource type="Script" path="res://CombatComponents/HitBox.gd" id="7_povqq"]
[ext_resource type="Script" path="res://player/key_manager.gd" id="8_uvjjn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rb75j"]
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck7dp"]
size = Vector2(26, 65.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g81l7"]
size = Vector2(24, 2.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_78ula")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_rb75j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_seln7")

[node name="Area2D" type="Area2D" parent="."]

[node name="SfxManager" parent="Area2D" instance=ExtResource("3_nsl3i")]
unique_name_in_owner = true

[node name="MusicManager" parent="Area2D" instance=ExtResource("4_kyawv")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
process_priority = 3
process_physics_priority = 3
zoom = Vector2(1.5, 1.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("5_hf0il")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("6_7ypip")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_ck7dp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ck7dp")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
script = ExtResource("7_povqq")
damage_type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 39)
shape = SubResource("RectangleShape2D_g81l7")
debug_color = Color(1, 0, 0, 0.419608)

[node name="HurtBox2" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
script = ExtResource("6_7ypip")
health_component = NodePath("../HealthComponent")

[node name="Key_manager" type="Node2D" parent="."]
script = ExtResource("8_uvjjn")

[connection signal="take_damage" from="HealthComponent" to="." method="_on_health_component_take_damage"]
[connection signal="deal_damage" from="HitBox" to="." method="_on_hit_box_deal_damage"]
